add: scopes with permissions